--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@400;600;700&family=Outfit:wght@500&family=Poppins:wght@400;500;600&family=Recursive&family=Roboto&display=swap" rel="stylesheet">
     <title>Cheese-Cake-WebPage</title>
 </head>
-<body>
+<body contenteditable>
         <header>
             <div class="header--wrapper">
                 <!-- Desktop Nav -->
@@ -124,8 +124,8 @@
                         <div class="div">
                             <h2>Biscoff Cheesecake</h2>
                             <p>Biscoff adores cheesecake magic</p>
-                            <div class="span-container">
-                                <span> <span class="dollar--span">$</span>11.00</span>
+                            <div class="span--container">
+                                <span class="amount--class"> <span class="dollar--span">$</span>11.00</span>
                                 <span>
                                     <img src="images/fi-sr-starstar (1).svg" alt="star-image">
                                     <img src="images/fi-sr-starstar (1).svg" alt="star-image">
