--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                         <div class="div">
                             <h2>Blueberry Cheesecake</h2>
                             <p>Blueberry love, cheesecake delight!</p>
-                            <div class="span-container">
-                                <span> <span class="dollar--span">$</span>9.00</span>
-                                <span>
+                            <div class="span--container">
+                                <span class="amount--class"> <span class="dollar--span">$</span>9.00</span>
+                                <span class="SC--img">
                                     <img src="images/fi-sr-starstar (1).svg" alt="star-image">
                                     <img src="images/fi-sr-starstar (1).svg" alt="star-image">
                                     <img src="images/fi-sr-starstar (1).svg" alt="star-image">
@@ -126,7 +126,7 @@
                             <p>Biscoff adores cheesecake magic</p>
                             <div class="span--container">
                                 <span class="amount--class"> <span class="dollar--span">$</span>11.00</span>
-                                <span>
+                                <span class="SC--img">
                                     <img src="images/fi-sr-starstar (1).svg" alt="star-image">
                                     <img src="images/fi-sr-starstar (1).svg" alt="star-image">
                                     <img src="images/fi-sr-starstar (1).svg" alt="star-image">
@@ -143,9 +143,9 @@
                         <div class="div">
                             <h2>Chocolate Cheesecake</h2>
                             <p>Cherish Chocolate, relish cheesecake magic!</p>
-                            <div class="span-container">
-                                <span> <span class="dollar--span">$</span>10.00</span>
-                                <span>
+                            <div class="span--container">
+                                <span class="amount--class"> <span class="dollar--span">$</span>10.00</span>
+                                <span class="SC--img">
                                     <img src="images/fi-sr-starstar (1).svg" alt="star-image">
                                     <img src="images/fi-sr-starstar (1).svg" alt="star-image">
                                     <img src="images/fi-sr-starstar (1).svg" alt="star-image">
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                 </div>
-                <p>View More <span class="para--space"> <img src="images/Green Arrow BTNarrow.svg" alt="Arrow"> </span> </p>
+                <p class="section--two-para"><span class="para--space">View More</span><img src="images/Green Arrow BTNarrow.svg" alt="Arrow"></p>
             </div>
         </section>
         <section>
