--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <p class="section--two-para"><span class="para--space">View More</span><img src="images/Green Arrow BTNarrow.svg" alt="Arrow"></p>
             </div>
         </section>
-        <section>
+        <section id="section--three">
             <div class="section--three">
                 <h1>Our Blog</h1>
                 <p>Our Recent Posts</p>
