--- a/index.html
+++ b/index.html
@@ -166,30 +166,36 @@
                 <div class="section--three-container">
                     <div class="section--three-content">
                         <img src="images/IMAGE FOR BLOG 1footer1.png" alt="Blog-Section-img">
-                        <p>23 Nov, 2023 / Cheesecake</p>
-                        <h2>A Peek Behind the Cheesecake Curtain</h2>
-                        <p class="STC--INFO">
-                            Step into our cheesecake haven, where the magic unfolds behind the scenes, whisking dreams into reality. Our kitchen is a symphony and very...
-                        </p>
-                        <p class="STC--read">Read More <span class="para--space"> <img src="images/Green Arrow BTNarrow.svg" alt="Arrow"> </span> </p>
+                        <div>   
+                            <p>23 Nov, 2023 / Cheesecake</p>
+                            <h2>A Peek Behind the Cheesecake Curtain</h2>
+                            <p class="STC--INFO">
+                                Step into our cheesecake haven, where the magic unfolds behind the scenes, whisking dreams into reality. Our kitchen is a symphony and very...
+                            </p>
+                            <p class="STC--read">Read More <span class="para--space"> <img src="images/Green Arrow BTNarrow.svg" alt="Arrow"> </span> </p>
+                        </div>
                     </div>
                     <div class="section--three-content">
                         <img src="images/Image Blog 2footer2.png" alt="Blog-Section-img">
-                        <p>18 July, 2023 / Cheesecake</p>
-                        <h2>Low-Sugar & Gluten-Free Cheesecakes</h2>
-                        <p class="STC--INFO">
-                            Welcome to our guilt-free indulgence zone, where we're redefining the art of cheesecake with our delectable low-sugar...
-                        </p>
-                        <p class="STC--read">Read More <span class="para--space"> <img src="images/Green Arrow BTNarrow.svg" alt="Arrow"> </span> </p>
+                        <div> 
+                            <p>18 July, 2023 / Cheesecake</p>
+                            <h2>Low-Sugar & Gluten-Free Cheesecakes</h2>
+                            <p class="STC--INFO">
+                                Welcome to our guilt-free indulgence zone, where we're redefining the art of cheesecake with our delectable low-sugar...
+                            </p>
+                            <p class="STC--read">Read More <span class="para--space"> <img src="images/Green Arrow BTNarrow.svg" alt="Arrow"> </span> </p>
+                        </div>
                     </div>
                     <div class="section--three-content">
                         <img src="images/Image Blog 3footer3.png" alt="Blog-Section-img">
-                        <p>1 January, 2024 / Cheesecake</p>
-                        <h2>Sweet Words - Customer Reviews of Cheesecakes</h2>
-                        <p class="STC--INFO">
-                            Indulge in the rich tapestry of heartfelt stories within "Sweet Words." This curated collection of customer reviews offers a glimpse into the joy...
-                        </p>
-                        <p class="STC--read">Read More <span class="para--space"> <img src="images/Green Arrow BTNarrow.svg" alt="Arrow"> </span> </p>
+                        <div> 
+                            <p>1 January, 2024 / Cheesecake</p>
+                            <h2>Sweet Words - Customer Reviews of Cheesecakes</h2>
+                            <p class="STC--INFO">
+                                Indulge in the rich tapestry of heartfelt stories within "Sweet Words." This curated collection of customer reviews offers a glimpse into the joy...
+                            </p>
+                            <p class="STC--read">Read More <span class="para--space"> <img src="images/Green Arrow BTNarrow.svg" alt="Arrow"> </span> </p>
+                        </div>
                     </div>
                 </div>
             </div>
