Completed section three and main

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@400;600;700&family=Outfit:wght@500&family=Poppins:wght@400;500;600&family=Recursive&family=Roboto&display=swap" rel="stylesheet">
-    <title>Cheese-Cake-WebPage</title>
+    <title>Cheese Cake WebPage</title>
 </head>
 <body contenteditable>
         <header>
@@ -172,7 +172,7 @@
                             <p class="STC--INFO">
                                 Step into our cheesecake haven, where the magic unfolds behind the scenes, whisking dreams into reality. Our kitchen is a symphony and very...
                             </p>
-                            <p class="STC--read">Read More <span class="para--space"> <img src="images/Green Arrow BTNarrow.svg" alt="Arrow"> </span> </p>
+                            <p class="STC--read">Read More</p>
                         </div>
                     </div>
                     <div class="section--three-content">
@@ -183,7 +183,7 @@
                             <p class="STC--INFO">
                                 Welcome to our guilt-free indulgence zone, where we're redefining the art of cheesecake with our delectable low-sugar...
                             </p>
-                            <p class="STC--read">Read More <span class="para--space"> <img src="images/Green Arrow BTNarrow.svg" alt="Arrow"> </span> </p>
+                            <p class="STC--read">Read More</p>
                         </div>
                     </div>
                     <div class="section--three-content">
@@ -194,7 +194,7 @@
                             <p class="STC--INFO">
                                 Indulge in the rich tapestry of heartfelt stories within "Sweet Words." This curated collection of customer reviews offers a glimpse into the joy...
                             </p>
-                            <p class="STC--read">Read More <span class="para--space"> <img src="images/Green Arrow BTNarrow.svg" alt="Arrow"> </span> </p>
+                            <p class="STC--read">Read More</p>
                         </div>
                     </div>
                 </div>
