--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <header>
             <div class="header--wrapper">
                 <!-- Desktop Nav -->
-                <nav class="nav">
+                <nav class="nav scrolled">
                     <div class="nav--name">
                         <a href="index.html" title="Link to home">
-                            <img src="images/LOGO OF CHEESECAKElogo (1).png" alt="Product_Logo" />
+                            <img src="images/LOGO OF CHEESECAKEHeaderlogo.svg" alt="Product_Logo" />
                         </a>
                     </div>
 
