Update code for desktop to make responsive design easier

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="hero--section-image">
-                    <img src="images/Main Image (Home)pic.png" alt="Main Image(Home)">
+                    <img src="images/Main Image (Home)main12.svg" alt="Main Image(Home)">
                 </div>
             </div>
         </header>
