--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <section id="section--one">
             <div class="section--one">
                 <div class="section--one-img">
-                    <img src="images/About Us Imagesec2.svg" alt="About us img">
+                    <img src="images/About Us Imageabouyt us.svg" alt="About us img">
                 </div>
                 <div class="section--one-info">
                     <h1>We Love Cheesecake</h1>
